--- a/rest_api/src/main/resources/static/login.html
+++ b/rest_api/src/main/resources/static/login.html
@@ -64,7 +64,7 @@
                         <label for="pwd">Password:</label>
                         <input type="password" class="form-control" id="pwd">
                     </div>
-                    <button style="width: 100%; background-color: #3793f7; border: 0px" type="button" onclick="sign_in()" class="btn btn-secondary">Sign In</button>
+                    <button id="submit_button" style="width: 100%; background-color: #3793f7; border: 0px" type="button" onclick="sign_in()" class="btn btn-secondary">Sign In</button>
                  </form>
             </div>
         </div>
