Profile page updated; profile.js not fully functional; profile contoller added.

--- a/rest_api/src/main/resources/static/profile.html
+++ b/rest_api/src/main/resources/static/profile.html
@@ -39,14 +39,21 @@
     <main role="main" class="container mt-100">
         <div class="row mt-30" >
             <form id="profile_form" class="center-content col-md-9">
-                <div class="row form-group mt-10">
+                <h1 class="left-align ">Profile</h1>
+                <div class="row form-group ">
                     <div class="col-md-6 left-align">
-                        <label for="name">Name:</label>
-                        <input type="text" class="form-control" id="name" value="My Name">
+                        <label for="type">Account Type:</label>
+                        <p class="form-control" id="type">Freelancer</p>
                     </div>
                     <div class="col-md-6" style="text-align: left;">
                         <label for="username">Username:</label>
-                        <input type="text" class="form-control" id="username" value="my_user_name">
+                        <p class="form-control" id="username"></p>
+                    </div>
+                </div>
+                <div class="row form-group ">
+                    <div class="col-md-6 left-align">
+                        <label for="name">Name:</label>
+                        <input type="text" class="form-control" id="name" value="My Name">
                     </div>
                 </div>
                 <div class="row form-group ">
@@ -92,7 +99,6 @@
                         </div>
                     </div>
                 </div>
-                
             </form>
         </div>
     </main>
