--- a/rest_api/src/main/resources/static/about.html
+++ b/rest_api/src/main/resources/static/about.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top header-distributed" >
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand header-logo" id="home" href="/homePage">Cloud<span>IT</span></a>
+                <a class="navbar-brand header-logo" id="home" href="/welcomePage">Cloud<span>IT</span></a>
             </div>
             <ul class="nav navbar-nav">
                 <li class="active"><a id="about" href="/aboutPage">About Us</a></li>
@@ -40,7 +40,7 @@
                 </div>
             </form> -->
             <ul class="nav navbar-nav navbar-right">
-                <li><a id="signup" href="/home"><span class="fa fa-user"></span> Sign Up</a></li>
+                <li><a id="signup" href="/loginPage"><span class="fa fa-user"></span> Sign Up</a></li>
             </ul>
         </div>
     </nav>
