--- a/rest_api/src/main/resources/static/welcome.html
+++ b/rest_api/src/main/resources/static/welcome.html
@@ -23,6 +23,7 @@
 </head>
 
 <body>
+    
     <!-- Navbar -->
     <nav class="navbar navbar-inverse navbar-fixed-top header-distributed" >
         <div class="container-fluid">
@@ -39,10 +40,9 @@
         </div>
     </nav>
 
-
-    <main role="main" class="container" style="margin-top: 100px">
+    <div role="main" class="container" style="margin-top: 100px">
         <h1 id="welcome_title"></h1>
-    </main><!-- /.container -->
+    </div><!-- /.container -->
 
 
     <!-- Footer -->
