Profile page completed. Unit tests passing; Tests with cucumber incomplete.

--- a/rest_api/src/main/resources/static/profile.html
+++ b/rest_api/src/main/resources/static/profile.html
@@ -40,7 +40,7 @@
     <main role="main" class="container mt-100">
         <div class="row mt-30" >
             <form id="profile_form" class="center-content col-md-9">
-                <h1 class="left-align ">Profile</h1>
+                <h1 class="left-align" id="profile_form_title">Profile</h1>
                 <div class="row form-group ">
                     <div class="col-md-6 left-align">
                         <label for="type">Account Type:</label>
@@ -65,8 +65,8 @@
                 </div>
                 <div class="row form-group ">
                     <div class="col-md-12 left-align">
-                        <label for="description">Areas of Interest:</label>
-                        <input data-role="tagsinput" class="form-control input-tags" id="interestedAreas"></textarea>
+                        <label for="interestedAreas">Areas of Interest:</label>
+                        <input data-role="tagsinput" class="form-control input-tags" id="interestedAreas">
                     </div>
                 </div>
                 <div class="row form-group mt-10">
