--- a/rest_api/src/main/resources/static/about.html
+++ b/rest_api/src/main/resources/static/about.html
@@ -40,12 +40,12 @@
                 </div>
             </form> -->
             <ul class="nav navbar-nav navbar-right">
-                <li><a id="signup" href="/loginPage"><span class="fa fa-user"></span> Sign Up</a></li>
+                <li><a id="signup" href="/home"><span class="fa fa-user"></span> Sign Up</a></li>
             </ul>
         </div>
     </nav>
 
-    <main role="main" id="about_page_content" class="container" style="margin-top: 100px">
+    <main role="main" class="container" style="margin-top: 100px">
         <!-- Intro -->
         <div class="row">
             <div class="text-center col-md-6"> 
