Started the abstraction of the navba to a separate component. Configurations for the webpage to gain access to the session cookie.

--- a/rest_api/src/main/resources/static/about.html
+++ b/rest_api/src/main/resources/static/about.html
@@ -21,6 +21,8 @@
 <body>
 
     <!-- Navbar -->
+    <div id="navBarID"></div>
+    <!--
     <nav class="navbar navbar-inverse navbar-fixed-top header-distributed" >
         <div class="container-fluid">
             <div class="navbar-header">
@@ -29,21 +31,12 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a id="about" href="/aboutPage">About Us</a></li>
             </ul>
-            <!-- <form class="navbar-form navbar-left" action="">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search" name="search">
-                    <div class="input-group-btn">
-                        <button class="btn btn-default" type="submit">
-                        <i class="glyphicon glyphicon-search"></i>
-                        </button>
-                    </div>
-                </div>
-            </form> -->
             <ul class="nav navbar-nav navbar-right">
                 <li><a id="signup" href="/home"><span class="fa fa-user"></span> Sign Up</a></li>
             </ul>
         </div>
     </nav>
+    -->
 
     <main role="main" class="container" style="margin-top: 100px">
         <!-- Intro -->
@@ -118,5 +111,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="assets/js/login.js"></script>
+    <script src="assets/js/global.js"></script>
 </body>
 </html>
