--- a/rest_api/src/main/resources/static/login.html
+++ b/rest_api/src/main/resources/static/login.html
@@ -21,29 +21,7 @@
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-inverse navbar-fixed-top header-distributed" >
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand header-logo" id="home" href="/welcomePage">Cloud<span>IT</span></a>
-            </div>
-            <ul class="nav navbar-nav">
-                <li><a id="about" href="/aboutPage">About Us</a></li>
-            </ul>
-            <!-- <form class="navbar-form navbar-left" action="">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search" name="search">
-                    <div class="input-group-btn">
-                        <button class="btn btn-default" type="submit">
-                        <i class="glyphicon glyphicon-search"></i>
-                        </button>
-                    </div>
-                </div>
-            </form> -->
-            <!-- <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><span class="fa fa-user"></span> Sign Up</a></li>
-            </ul> -->
-        </div>
-    </nav>
+    <div id="navBarID"></div>
 
     <main role="main" class="container" style="margin-top: 100px">
         <!-- Intro -->
@@ -132,5 +110,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="assets/js/login.js"></script>
+    <script src="assets/js/global.js"></script>
 </body>
 </html>
