--- a/rest_api/src/main/resources/static/messageCenter.html
+++ b/rest_api/src/main/resources/static/messageCenter.html
@@ -19,23 +19,10 @@
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 
-<body >
+<body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-inverse navbar-fixed-top header-distributed" >
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand header-logo" id="home" href="/welcomePage">Cloud<span>IT</span></a>
-            </div>
-            <ul class="nav navbar-nav">
-                <li><a id="search" href="/searchPage">Search</a></li>
-                <li class="active"><a id="messages" href="/messagesPage">Messages</a></li>
-                <li><a id="jobs" href="/jobsPage">MyJobs</a></li>
-                <li><a id="profile" href="/profilePage">Profile</a></li>
-                <li><a id="about" href="/aboutPage">About Us</a></li>
-            </ul>
-        </div>
-    </nav>
+    <div id="navBarID"></div>
 
     <!-- Body -->
     <main role="main" class="main" style="min-height: 90vh; margin-top:55px; width: 100%">
@@ -192,5 +179,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="assets/js/messageCenter.js"></script>
+    <script src="assets/js/global.js"></script>
 </body>
 </html>
