--- a/rest_api/src/main/resources/static/search.html
+++ b/rest_api/src/main/resources/static/search.html
@@ -19,23 +19,10 @@
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 
-<body >
+<body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-inverse navbar-fixed-top header-distributed" >
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand header-logo" id="home" href="/welcomePage">Cloud<span>IT</span></a>
-            </div>
-            <ul class="nav navbar-nav">
-                <li class="active"><a id="search" href="/searchPage">Search</a></li>
-                <li><a id="messages" href="/messagesPage">Messages</a></li>
-                <li><a id="jobs" href="/jobsPage">MyJobs</a></li>
-                <li><a id="profile" href="/profilePage">Profile</a></li>
-                <li><a id="about" href="/aboutPage">About Us</a></li>
-            </ul>
-        </div>
-    </nav>
+    <div id="navBarID"></div>
 
     <!-- Search Bar -->
     <div class="container" style="min-height: 15vh; margin-top: 100px;">
@@ -246,5 +233,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src = "https://ajax.aspnetcdn.com/ajax/knockout/knockout-3.1.0.js" type = "text/javascript"></script>
     <script type='text/javascript' src="assets/js/search.js"></script>
+    <script src="assets/js/global.js"></script>
 </body>
 </html>
