Refactored some aspects of the webpage. Implemented feature and its tests.

--- a/rest_api/src/main/resources/static/profile.html
+++ b/rest_api/src/main/resources/static/profile.html
@@ -9,12 +9,11 @@
     <title>Profile</title>
 
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Core CSS -->
     <link href="assets/css/footer.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/header.css" rel="stylesheet" type="text/css">
     <link href="assets/css/profile.css" rel="stylesheet" type="text/css">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
@@ -24,7 +23,7 @@
     <!-- Navbar -->
     <div id="navBarID"></div>
 
-    <main role="main" class="container mt-100">
+    <main role="main" class="container">
         <div class="row mt-30" >
             <form id="profile_form" class="center-content col-md-9">
                 <h1 class="left-align ">Profile</h1>
@@ -92,49 +91,12 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer-distributed">
-        <div class="footer-left">
-            <h3>Cloud<span>IT</span></h3>
-            <p class="footer-links">
-                <a href="/welcomePage">Home</a> ·
-                <a href="/searchPage">IT Search</a> ·
-                <a href="/messagesPage">Messages</a> ·
-                <a href="/profilePage">Profile</a> ·
-                <a href="/aboutPage">About</a>
-            </p>
-            <p class="footer-company-name">CloudIT &copy; 2019</p>
-        </div>
-        <div class="footer-center">
-            <div>
-                <i class="fa fa-map-marker"></i>
-                <p><span>Campus Universitário de Santiago, </span>3810-193 Aveiro</p>
-            </div>
-            <div>
-                <i class="fa fa-phone"></i>
-                <p>+351 234 567 890</p>
-            </div>
-            <div>
-                <i class="fa fa-envelope"></i>
-                <p><a href="mailto:support@company.com">cloudit_support@cloudit.com</a></p>
-            </div>
-        </div>
-        <div class="footer-right">
-            <p class="footer-company-about">
-                <span>About Us</span>
-                Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
-            </p>
-            <div class="footer-icons">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
-                <a href="#"><i class="fa fa-github"></i></a>
-            </div>
-        </div>
-    </footer> 
+    <div id="footerID"></div>
 
     <!-- Core JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="assets/js/profile.js"></script>
     <script src="assets/js/global.js"></script>
 </body>
