Fix some problems mentioned on sonar -Refactor of response creation -All areas now have the same format (class Utils.AreaBeautifier) -Remove unused comments/logs/imports

--- a/rest_api/src/main/resources/static/search.html
+++ b/rest_api/src/main/resources/static/search.html
@@ -264,7 +264,7 @@
                                             </div>
                                             <div class="row">
                                                 <span class="col-md-2">User type: </span>
-                                                <span class="userSearchType col-md-10" data-bind="text: userModalUserType"></span>
+                                                <span class="col-md-10" data-bind="text: userModalUserType"></span>
                                             </div>
                                             <div data-bind="if: userModalJobs().length == 0">
                                                 <div data-bind="if: userModalUserType() == 'freelancer'">
