--- a/rest_api/src/main/resources/static/jobs.html
+++ b/rest_api/src/main/resources/static/jobs.html
@@ -87,7 +87,7 @@
                     </div>
                     <div id="allOffers" data-bind="foreach: { data: acceptedOffers, as: 'job' }">
                         <!-- Post -->
-                        <div class="blog-box clearfix row" data-toggle="modal" data-target="#offerModal" data-bind="click: function(job){showModal(job)}">
+                        <div class="blog-box clearfix row" id="post_box" data-toggle="modal" data-target="#offerModal" data-bind="click: function(job){showModal(job)}">
                             <div class="col-md-12">
                                 <div class="row">
                                     <!-- Box -->
@@ -119,7 +119,7 @@
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <button type="button" class="close" data-dismiss="modal" id="modalClose">&times;</button>
                                 <h3 class="modal-title" id="modalTitleH3"></h3>
                             </div>
                             <div class="row modal-body">
