Fix tags-input element

--- a/rest_api/src/main/resources/static/profile.html
+++ b/rest_api/src/main/resources/static/profile.html
@@ -16,6 +16,7 @@
     <link href="assets/css/footer.css" rel="stylesheet" type="text/css">
     <link href="assets/css/profile.css" rel="stylesheet" type="text/css">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/tagsinput.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -99,5 +100,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="assets/js/profile.js"></script>
     <script src="assets/js/global.js"></script>
+    <script src="assets/js/tagsinput.js"></script>
 </body>
 </html>
